adding swager on all handler
